tests/test0151.exp
Parse error, unexpected := ( tests/test0151.ctr: 5 )
'My' should always be followed by a property name!
