tests/test0151.ctr
#NOAST
#Test parser error
o := Object new.
o on: 'test' do: {\
	my := 123.
}.
